<resources>
    <string name="app_name">nbCamp_week4_assignment</string>
    <string name="text1">text1text1text1text1text1text1text1text1text1text1\ntext1text1text1text1text1text1text1text1text1text1</string>
    <string name="text2">text2text2text2text2text2text2text2text2text2text2\ntext2text2text2text2text2text2text2text2text2text2</string>
    <string name="text3">text3text3text3text3text3text3text3text3text3text3\ntext3text3text3text3text3text3text3text3text3text3\ntext3text3text3text3text3text3text3text3text3text3\ntext3text3text3text3text3text3text3text3text3text3\ntext3text3text3text3text3text3text3text3text3text3</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="siginTitle">Innovate XI</string>
    <string name="ID">&#160;아이디를 입력해주세요.</string>
    <string name="Password">&#160;비밀번호를 입력해주세요.</string>
    <string name="account">계정을 생성하세요</string>
    <string name="name">&#160;이름을 입력해주세요.</string>
    <string name="check">중복체크</string>
    <string name="cancel">취소</string>
    <string name="update">수정하기</string>
    <string name="checkId">사용 가능한 아이디 입니다.</string>
    <string name="checkId2">중복된 아이디 입니다 다른 아이디를 입력하세요.</string>
    <string name="information">입력되지 않은 정보가 있습니다.</string>
    <string name="complete">회원가입 완료</string>
    <string name="member">회원이 아니시거나 아이디와 비밀번호를 확인해주세요.</string>
    <string name="check2">먼저 아이디 중복확인을 해주세요</string>
    <string name="key">종료하려면 한 번 더 누르세요</string>
    <string name="save">저장</string>



</resources>