<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dcdcdc"
    tools:context=".SignUpActivity">


    <ImageView
        android:id="@+id/iCon"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/account"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iCon" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border"
        android:hint="@string/name"
        android:textColorHint="#8C8C8C"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editID"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border"
        android:hint="@string/ID"
        android:textColorHint="#8C8C8C"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editPW"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editPW"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColorHint="#8C8C8C"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_shape"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btn_whtite"
        android:text="@string/cancel"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:text="@string/check"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editID"
        app:layout_constraintTop_toTopOf="@+id/editID" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="129dp"
        android:layout_height="129dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="129dp"
        android:layout_height="129dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>